<?xml version="1.0"?>
<package>
  <name>roch_gazebo</name>
  <version>1.0.12</version>
  <description>SawYer roch Simulator bringup</description>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <author email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</author>
  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>
  <author email="wzhang@softrobtech.com">Carl</author>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roch_gazebo</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_simulator/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>roch_control</run_depend>
  <run_depend>roch_description</run_depend>
  <run_depend>roch_navigation</run_depend>
  <run_depend>roch_bringup</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>map_server</run_depend>

  <export>
  </export>
</package>
