<?xml version="1.0"?>
<package>
  <name>roch_simulator</name>
  <version>1.0.11</version>
  <description>Metapackage for SawYer roch simulation software</description>

  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <url type="website">http://ros.org/wiki/roch_simulator</url>
  <url type="bugtracker">https://github.com/SawYer-Robotics/roch_simulator/issues</url>
  <url type="repository">https://github.com/SawYer-Robotics/roch_simulator</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roch_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
